# xiaozhi-unity

./: .gitignore  README.md
.github/workflows/: Build.yml  build-android.yml  build-macos-arm64.yml  build-macos-x64.yml  build-win-x64.yml  build-windows-x64.yml
Plugins/AndroidLib/aec/: build.gradle.kts
Plugins/AndroidLib/aec/src/androidTest/java/com/sylar/xiaozhi/unity/xiaozhi/: ExampleInstrumentedTest.java
Plugins/AndroidLib/aec/src/test/java/com/sylar/xiaozhi/unity/xiaozhi/: ExampleUnitTest.java
Plugins/AndroidLib/lib/: build.gradle.kts
Plugins/AndroidLib/lib/src/main/java/com/sylar/xiaozhi/unity/lib/: AECManager.java
Plugins/android-aec-lib/: build.bat  build.gradle  local.properties
Plugins/android-aec-lib/src/main/java/com/sylar/xiaozhi/unity/androidaec/: AECManager.java
Plugins/webrtc_aecm/: CMakeLists.txt  README.md  aecm_export.cc  aecm_export.h  main.cc
Plugins/webrtc_aecm/aecm/: aecm_core.cc  aecm_core.h  aecm_core_c.cc  aecm_core_neon.cc  checks.cc  checks.h  complex_bit_reverse.c  complex_fft.c  cpu_features.cc  cross_correlation_neon.c  delay_estimator.cc  delay_estimator_internal.h  delay_estimator_wrapper.cc  division_operations.c  dot_product_with_scale.cc  downsample_fast.c  downsample_fast_neon.c  echo_control_mobile.cc  energy.c  get_scaling_square.c  min_max_operations.c  min_max_operations_neon.c  randomization_functions.c  ring_buffer.c  rtc_export.h  safe_compare.h  safe_conversions.h  sanitizer.h  signal_processing_library.h  spl_inl.c  spl_inl.h  vector_scaling_operations.c
Project/Assets/Editor/: BuildPresets.cs  BuildPresetsEditor.cs  Builder.cs  BuilderCI.cs
Project/Assets/Plugins/Android/: AndroidManifest.xml
Project/Assets/Plugins/FMOD/Resources/: FMODStudioSettings.asset
Project/Assets/Resources/: ThemeSettings.asset
Project/Assets/Resources/Sprite/: Default.spriteatlas
Project/Assets/Resources/UI/: MainUI.prefab
Project/Assets/Resources/UI/Comp/: Button_Icon_Circle.prefab  Button_Icon_Circle_Shadow.prefab  Button_Icon_Round.prefab  Button_Icon_Round_Shadow.prefab  Button_Icon_Text_Round.prefab  Button_Icon_Text_Round_Shadow.prefab  Button_Text_Round.prefab  Button_Text_Round_Shadow.prefab  Panel.prefab  Radio.prefab  Section.prefab  Section_InputField.prefab  Section_Slider.prefab  Section_Toggle_Text_Round_Group.prefab  Slider.prefab  Tips_Help.prefab  Toggle_Icon_Circle.prefab  Toggle_Icon_Circle_Shadow.prefab  Toggle_Text_Round.prefab  Toggle_Text_Round_Shadow.prefab  VerticalScrollbar.prefab
Project/Assets/Resources/UI/MainUI/: EmojiMainUI.prefab  MainUI.prefab  VRMMainUI.prefab
Project/Assets/Resources/UI/NotificationUI/: NotificationUI.prefab
Project/Assets/Resources/UI/SettingsUI/: SettingsUI.prefab
Project/Assets/SDF-UI-Toolkit/Resources/: SDUISettings.asset
Project/Assets/Scenes/: Entry.unity  VRM.unity
Project/Assets/Scripts/: App.cs  AppSettings.cs  Config.cs  Context.cs  Entry.cs  Lang.cs  OTA.cs  Settings.cs
Project/Assets/Scripts/Audio/: AECMWrapper.cs  AudioCodec.cs  AudioProcessor.cs  FMODAudioCodec.cs  FMODAudioProcessor.cs  OpusDecoder.cs  OpusEncoder.cs  OpusResampler.cs  OpusWrapper.cs  SherpaOnnxWakeService.cs  SpeakerOutputCapture.cs  ULipSyncAudioProxy.cs  UnityAudioCodec.cs  WakeService.cs  WakeWordDetect.cs
Project/Assets/Scripts/Display/: Display.cs  EmojiDisplay.cs  FPSDisplay.cs  IDisplay.cs  InputWaveUI.cs  UIDisplay.cs  UIInputWave.cs  VRMDisplay.cs
Project/Assets/Scripts/Display/Comp/: ColourModifier.cs  HyperlinkText.cs  XButton.cs  XImage.cs  XInputWave.cs  XRadio.cs  XScrollbar.cs  XSlider.cs  XToggle.cs
Project/Assets/Scripts/Display/Comp/Editor/: XSliderEditor.cs  XToggleEditor.cs
Project/Assets/Scripts/Display/Theme/: ThemeManager.cs  ThemeSettings.cs
Project/Assets/Scripts/Display/Theme/Editor/: ThemeSettingsEditor.cs
Project/Assets/Scripts/Display/UI/: BaseUI.cs  EmojiMainUI.cs  IUIService.cs  MainUI.cs  MaskUI.cs  NotificationUI.cs  SettingsUI.cs  UILayer.cs  UIManager.cs  VRMMainUI.cs
Project/Assets/Scripts/Lang/: Lang.cs
Project/Assets/Scripts/Protocol/: Protocol.cs  ProtocolEnums.cs  WebSocketProtocol.cs
Project/Assets/Scripts/Utils/: AndroidLib.cs  ClipStreamBuffer.cs  FMODHelper.cs  FPSDisplay.cs  FileUtility.cs  PermissionManager.cs  ResourceLoader.cs  RingBuffer.cs  Tools.cs  TransformFollower.cs  UGUIExtensions.cs  UniTaskExtensions.cs
Project/Assets/Settings/: Vyuk.asset
Project/Assets/StreamingAssets/: config.json
Project/Assets/StreamingAssets/lang/: CN.json  EN.json  zh-CN.json
Project/Assets/StreamingAssets/sherpa-onnx/: keywords.txt
Project/Assets/TextMesh Pro/Resources/Fonts & Materials/: Alibaba-PuHuiTi-Medium SDF - Drop Shadow.mat  Alibaba-PuHuiTi-Medium SDF.asset  NotoEmoji-Bold SDF.asset
Project/ProjectSettings/: GvhProjectSettings.xml  ProjectSettings.asset
